tests/machine/x/scala/order_by_map.scala
// Generated by Mochi compiler v0.10.25 on 2025-07-13T05:12:26Z
object order_by_map {
  case class Data(a: Int, b: Int)

  def main(args: Array[String]): Unit = {
    val data = List(Data(a = 1, b = 2), Data(a = 1, b = 1), Data(a = 0, b = 5))
    val sorted = (for { x <- data } yield x).sortBy(x => Data(a = x.a, b = x.b)).map(x => x)
    println(sorted)
  }
}
